--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Calculator</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
 </head>
-<body>
+<body class="d-flex justify-content-center">
 <div>
     <h1 class="h1">Todo list</h1>
     <ul class="ul" id="list">
